--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,6 @@ img {
 .logo-header {
     display: block;
     padding: 16px 0;
-
 } 
 
 .logo {
@@ -117,6 +116,7 @@ img {
 }
 
 .burger-button {
+    cursor: pointer;
     padding: 0;
     border: none;
     background-color: transparent;
@@ -128,8 +128,106 @@ img {
 }
 
 @media screen and (min-width: 768px) {
-    .container {
-        max-width: 768px;
-    }
+    .burger-button {
+    display: none;
+}
+
+.header-nav {
+    display: flex;
+    align-items: center;
+}
+
+.header-nav-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
+.logo-header {
+    padding: 24px 0;
+    margin-right: 120px;
+}
+
+.address {
+    font-style: normal;
+display: block;
+}
+
+.address-list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.list-contacts-link {
+    display: block;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.list-contacts-link:hover,
+.list-contacts-link:focus {
+    color: #404bbf;
+}
+
+.nav-item-link {
+    padding: 24px 0;
+    display: block;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-item-link:hover,
+.nav-item-link:focus {
+    color: #404bbf;
+}
+
+
+.nav-item-link.current {
+    color: #404bbf;
+    position: relative;
+}
+
+.nav-item-link.current::after {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+}
+
+.nav-item-link:hover::after,
+.nav-item-link:focus::after {
+    width: 100%;
+}
+}
+
+@media screen and (min-width: 1158px) {
+.logo-header {
+    margin-right: 76px;
+}
+
+.address-list {
+    flex-direction: row;
+    align-items: center;
+    gap: 40px;
+}
+.list-contacts-link {
+    padding: 24px 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
 }
 /* #endregion header */
