--- a/css/styles.css
+++ b/css/styles.css
@@ -303,6 +303,12 @@ display: block;
     margin-bottom: auto;
 }
 
+.mobile-nav-list {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
 .mobile-nav-link {
     font-weight: 700;
     font-size: 36px;
@@ -341,9 +347,6 @@ display: block;
     color: #404bbf;
 }
 
-
-/* -----> MOBILE MENU -->/** LINK */
-
 .mobile-social-list {
     display: flex;
     justify-content: center;
@@ -370,21 +373,6 @@ display: block;
     background-color: #404bbf;
     transform: translateY(0%);
 }
-.mobile-nav-list {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-}
-
-
-
-.mobile-nav-link {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 111%;
-    letter-spacing: 0.02em;
-    color: #2E2F42;
-}
 
 @media screen and (min-width: 768px) {
     .mobile-menu {
@@ -394,3 +382,247 @@ display: block;
 /* #endregion mobile menu */
 
 /* #endregion header */
+
+/* #region Hero */
+
+.hero {
+ padding: 72px 0px;
+    background-image: linear-gradient(to bottom,
+            rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)),
+    image-set(
+    url(../images/office-1.jpg ) 1x,
+    url(../images/office-1x2.jpg) 2x ) ;
+
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    min-width: 320px;
+    margin: 0 auto;
+}
+
+.hero-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 72px;
+}
+
+.hero-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #fff;
+    max-width: 216px;
+    margin-bottom: 36px;
+}
+
+.hero-button {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #fff;
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
+    background-color: #4d5ae5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    
+}
+
+.hero-button:hover,
+.hero-button:focus,
+.hero-button:active {
+    background-color: #404bbf;
+}
+
+@media screen and (min-width: 768px) {
+.hero {
+    padding: 112px 0;
+    min-width: 768px;
+} 
+
+.hero-title {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07143;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #fff;
+    min-width: 496px;
+}
+}
+
+@media screen and (min-width: 1158px) {
+    .hero {
+    padding: 188px 0;
+    max-width: 1440px;
+}
+
+.hero-title {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    min-width: 496px;
+    margin-bottom: 48px;
+
+}
+}
+/* #endregion Hero */
+
+/* #region Features */
+.features {
+    padding: 96px 0;
+}
+
+.features-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 72px;
+}
+
+.features-title {
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    text-transform: capitalize;
+    color: #2e2f42;
+}
+
+.features-list {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+    width: 288px;
+    /* Соответствует макету */
+}
+
+.features-list-item {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 16px;
+}
+
+.features-list-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.features-list-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+@media screen and (min-width: 768px) {
+    .features-container {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        row-gap: 72px;
+        column-gap: 24px;
+    }
+
+    .features-list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: auto;
+        justify-content: center;
+        gap: 24px;
+    }
+
+    .features-list-item {
+        width: calc((100% - 24px) / 2);
+        text-align: left;
+    }
+
+    .features-list-title {
+        font-size: 20px;
+        line-height: 1.2;
+        margin-bottom: 8px;
+    }
+
+    .features-list-text {
+        font-weight: 400;
+        font-size: 16px;
+    }
+}
+@media screen and (min-width: 1158px) {
+    .features {
+            padding: 120px 0;
+        }
+    
+        .features-container {
+            display: flex;
+    
+        }
+    
+        .features-title {
+            font-weight: 700;
+            font-size: 36px;
+            line-height: 1.11;
+            letter-spacing: 0.02em;
+            color: #2e2f42;
+        }
+    
+        .features-list {
+            gap: 24px;
+        }
+    
+        .features-list-items {
+            width: calc((100% - 72px) / 4);
+        }
+    
+        .features-list-link {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 112px;
+            background-color: #f4f4fd;
+            border-radius: 4px;
+            border: 1px solid #8e8f99;
+            margin-bottom: 8px;
+        }
+    
+        .icon-features {
+            width: 64px;
+            height: 64px;
+            fill: #4d5ae5;
+        }
+    
+        .features-list-title {
+            font-weight: 500;
+            font-size: 20px;
+            line-height: 1.2;
+            letter-spacing: 0.02em;
+            color: #2e2f42;
+            margin-bottom: 8px;
+        }
+    
+        .features-list-text {
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: 0.02em;
+        }
+}
+
+
+/* #endregion Features */
