--- a/css/styles.css
+++ b/css/styles.css
@@ -505,7 +505,6 @@ display: block;
     flex-direction: column;
     gap: 72px;
     width: 288px;
-    /* Соответствует макету */
 }
 
 .features-list-item {
@@ -513,6 +512,10 @@ display: block;
     flex-direction: column;
     text-align: center;
     gap: 16px;
+}
+
+.features-list-link {
+    display: none;
 }
 
 .features-list-title {
@@ -533,11 +536,7 @@ display: block;
 
 @media screen and (min-width: 768px) {
     .features-container {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        row-gap: 72px;
-        column-gap: 24px;
+        display: block;
     }
 
     .features-list {
@@ -545,12 +544,15 @@ display: block;
         flex-wrap: wrap;
         width: auto;
         justify-content: center;
-        gap: 24px;
+        row-gap: 72px;
+        column-gap: 24px;
     }
 
     .features-list-item {
         width: calc((100% - 24px) / 2);
+        position: relative;
         text-align: left;
+        
     }
 
     .features-list-title {
@@ -564,65 +566,198 @@ display: block;
         font-size: 16px;
     }
 }
+
 @media screen and (min-width: 1158px) {
     .features {
-            padding: 120px 0;
-        }
-    
-        .features-container {
-            display: flex;
-    
-        }
-    
-        .features-title {
-            font-weight: 700;
-            font-size: 36px;
-            line-height: 1.11;
-            letter-spacing: 0.02em;
-            color: #2e2f42;
-        }
-    
-        .features-list {
-            gap: 24px;
-        }
-    
-        .features-list-items {
-            width: calc((100% - 72px) / 4);
-        }
-    
-        .features-list-link {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 112px;
-            background-color: #f4f4fd;
-            border-radius: 4px;
-            border: 1px solid #8e8f99;
-            margin-bottom: 8px;
-        }
-    
-        .icon-features {
-            width: 64px;
-            height: 64px;
-            fill: #4d5ae5;
-        }
-    
-        .features-list-title {
-            font-weight: 500;
-            font-size: 20px;
-            line-height: 1.2;
-            letter-spacing: 0.02em;
-            color: #2e2f42;
-            margin-bottom: 8px;
-        }
-    
-        .features-list-text {
-            font-weight: 400;
-            font-size: 16px;
-            line-height: 1.5;
-            letter-spacing: 0.02em;
-        }
+        padding: 120px 0;
+    }
+
+    .features-container {
+        flex-wrap: nowrap;
+    }
+
+    .features-list {
+        display: flex;
+        flex-direction: row;
+        gap: 24px;
+    }
+
+    .features-list-item {
+        width: calc((100% - 72px) / 4);
+    }
+
+    .features-list-title {
+        font-size: 20px;
+    }
+
+    .features-list-link {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 112px;
+        background-color: #f4f4fd;
+        border-radius: 4px;
+        border: 1px solid #8e8f99;
+        margin-bottom: 8px;
+    }
+}
+/* #endregion Features */
+
+/* #region Team */
+.team {
+    background: #f4f4fd;
+        padding: 96px 0;
 }
 
+.team-container {}
 
-/* #endregion Features */
+.team-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11111;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 72px;
+}
+
+.team-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 72px;}
+
+.team-card {
+    border-radius: 0 0 4px 4px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    width: 264px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+            0px 1px 1px rgba(46, 47, 66, 0.16),
+            0px 2px 1px rgba(46, 47, 66, 0.08);
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+    }
+    
+    .team-card:hover,
+    .team-card:focus {
+        box-shadow: 0 4px 8px rgba(46, 47, 66, 0.2),
+            0 6px 20px rgba(46, 47, 66, 0.19);
+    
+    }
+
+
+.container-team-info {
+    padding: 32px 16px;
+}
+
+.team-list-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-align: center;
+
+}
+
+.team-card-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+    text-align: center;
+    margin-bottom: 8px;
+}
+
+.team-list-socmedia {
+     display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+.socmedia-list-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #4d5ae5;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-socmedia-list-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}   
+.team-socmedia-list-link:hover,
+.team-socmedia-list-link:focus{
+    background-color: #404bbf;
+    transform: translateY(0%);
+}
+    
+.svg {
+    fill: #f4f4fd;
+}
+
+@media screen and (min-width: 768px) {
+    .team-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    column-gap: 24px;
+    row-gap: 64px;    
+    }
+
+    .team-card {
+    max-width: 264px; 
+    flex-basis: calc((100% - 24px) / 2);
+}
+}
+@media screen and (min-width: 1158px){
+.team {
+        padding: 120px 0;
+    }
+
+.team-link {
+    flex-basis: calc((100% - 72px) / 4);
+}
+}
+
+/* #endregion Team */
+
+/* #region Portfolio */
+
+.portfolio {}
+
+.container {}
+
+.portfolio-container {}
+
+.portfolio-title {}
+
+.portfolio-list {}
+
+.portfolio-list-items {}
+
+.container-info {}
+
+.overlay {}
+
+.text-info {}
+
+.container-portfolio-info {}
+
+.portfolio-list-title {}
+
+.portfolio-list-text {}
+
+/* #endregion Portfolio */
