--- a/css/styles.css
+++ b/css/styles.css
@@ -736,28 +736,109 @@ display: block;
 
 /* #region Portfolio */
 
-.portfolio {}
+.portfolio {
+    padding: 96px 0;
+}
 
-.container {}
+.portfolio-title {
+    font-weight: 700;
+font-size: 36px;
+line-height: 1.11111;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+margin-bottom: 72px;
+}
 
-.portfolio-container {}
+.portfolio-list {
+    display: flex;
+flex-direction: column;
+gap: 48px;
+}
 
-.portfolio-title {}
+.overlay {
+    display: none;
+}
 
-.portfolio-list {}
+.container-portfolio-info {
+    padding: 32px 16px;
+        border: 1px solid #e7e9fc;
+        border-top: none;
+        justify-content: flex-start;
+}
 
-.portfolio-list-items {}
+.portfolio-list-title {
+    font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+}
 
-.container-info {}
+.portfolio-list-text {
+    font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #434455;
+}
 
-.overlay {}
 
-.text-info {}
+@media screen and (min-width: 768px){
+.portfolio-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 72px;
+    column-gap: 24px;
+    justify-content: center;
+    align-items: center;
+}
+.portfolio-list-items{
+    flex-basis: calc((100% - 24px) / 2);
+}
+}
 
-.container-portfolio-info {}
+@media screen and (min-width: 1158px){
+    .portfolio {
+        padding: 120px 0;
+        }
+    .portfolio-list{
+    row-gap: 48px;
+    }
+    .portfolio-list-items{
+    flex-basis: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .container-info{
+    position: relative;
+    overflow: hidden;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.portfolio-list-title {}
+    }
+    .portfolio-list-items:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+    }
+    .overlay {
+    display: block;
+    background-color: #4d5ae5;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
-.portfolio-list-text {}
+    .portfolio-list-items:hover .overlay {
+    transform: translateY(0);
+    }
+}
 
 /* #endregion Portfolio */
