--- a/css/styles.css
+++ b/css/styles.css
@@ -842,3 +842,171 @@ gap: 48px;
 }
 
 /* #endregion Portfolio */
+
+/* #region Footer */
+
+.footer {
+    background-color: #2e2f42;
+    padding: 96px 0;
+}
+
+.footer-container {
+display: flex;
+    flex-direction: column;
+    gap: 72px;
+}
+
+.footer-all {
+    display: flex;
+        flex-direction: column;
+        gap: 72px;
+        align-items: center;
+
+}
+
+
+.logo {
+    display: block;
+    text-align: center;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+    margin-bottom: 16px;}
+
+.footer-logo {
+    font-family: "Raleway", sans-serif;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 1.17;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: #4d5ae5;
+        margin-bottom: 16px;
+}
+
+.white {
+    color: #f4f4fd;
+}
+
+.footer-text {
+    font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #f4f4fd;
+}
+
+:root {
+    --white-color: #FFFFFF;
+}
+
+.footer-center {
+    text-align: center;
+}
+
+.footer-list-title {
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #fff;
+        margin-bottom: 16px;
+        color: var(--white-color);
+}
+
+.footer-list {
+    display: flex; 
+    justify-content: center;
+    gap: 16px;
+}
+
+.socmedia-list-link {
+    display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background-color: #4d5ae5;
+        width: 40px;
+        height: 40px;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .socmedia-list-link:hover,
+    .socmedia-list-link:focus {
+        background-color: #31d0aa;
+    }
+
+
+.footer-subscribe-container {}
+
+.footer-subscribe-title {
+    font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #fff;
+margin-bottom: 16px;
+text-align: center;
+}
+
+.footer-subscribe-form {
+    display: flex;
+}
+
+.footer-subscribe-label {
+    display: flex;
+}
+
+.footer-subscribe-input {
+    font-weight: 400;
+font-size: 12px;
+line-height: 2;
+letter-spacing: 0.04em;
+padding-left: 16px;
+color: #ffffff;
+border: 1px solid #fff;
+background-color: transparent;
+border-radius: 4px;
+width: 288px;
+height: 40px;
+margin-bottom: 16px;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.footer-subscribe-input::placeholder {
+    color: #ffffff;
+}
+.footer-subscribe-button {
+    min-width: 165px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4d5ae5;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+}
+
+.footer-subscribe-button:hover,
+.footer-subscribe-button:focus {
+    background-color: #404bbf;
+}
+
+.footer-subscribe-icon {
+    margin-left: 16px;
+    fill: #ffffff;
+}
+/* #endregion Footer */
