--- a/css/styles.css
+++ b/css/styles.css
@@ -955,7 +955,7 @@ text-align: center;
 }
 
 .footer-subscribe-form {
-    display: flex;
+
 }
 
 .footer-subscribe-label {
@@ -982,6 +982,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     color: #ffffff;
 }
 .footer-subscribe-button {
+    flex-direction: row;
     min-width: 165px;
     height: 40px;
     display: flex;
