--- a/css/styles.css
+++ b/css/styles.css
@@ -932,7 +932,9 @@ display: flex;
         width: 40px;
         height: 40px;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    .socmedia-list-link:hover,
+}
+    
+        .socmedia-list-link:hover,
     .socmedia-list-link:focus {
         background-color: #31d0aa;
     }
@@ -1287,4 +1289,16 @@ input[type="checkbox"]:checked+.modal-checkbox-label .modal-checkbox-span {
 
 }
 
+@media screen and (min-width: 768px) {
+    .modal-window {
+        width: 408px;
+        padding: 72px 24px 24px 24px;
+    }
+
+    .modal-checkbox-wrapper {
+        margin-bottom: 24px;
+    }
+
+    
+}
 /* #endregion Modal */
