--- a/css/styles.css
+++ b/css/styles.css
@@ -573,33 +573,53 @@ display: block;
     }
 
     .features-container {
-        flex-wrap: nowrap;
-    }
-
-    .features-list {
         display: flex;
-        flex-direction: row;
-        gap: 24px;
+    flex-direction: column;
+    align-items: center;
     }
 
-    .features-list-item {
-        width: calc((100% - 72px) / 4);
-    }
+.features-list {
+    display: flex;
+    gap: 24px;
+}
 
-    .features-list-title {
-        font-size: 20px;
-    }
+.features-list-items {
+    width: calc((100% - 72px) / 4);
+}
 
-    .features-list-link {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 112px;
-        background-color: #f4f4fd;
-        border-radius: 4px;
-        border: 1px solid #8e8f99;
-        margin-bottom: 8px;
-    }
+.features-list-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+}
+
+.icon-features {
+    width: 64px;
+    height: 64px;
+    fill: #4d5ae5;
+}
+
+.features-list-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+}
+
+.features-list-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
 }
 /* #endregion Features */
 
@@ -1058,7 +1078,6 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     }
 }
 /* #endregion Footer */
-
 
 /* #region Modal */
 
