--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body {
     font-family: "Roboto", sans-serif;
     background-color: #fff;
     color: #434455;
+    overflow-x: hidden;
 }
 
 .hidden {
@@ -238,7 +239,8 @@ display: block;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    display: none;
     background-color: #fff;
     opacity: 0;
     visibility: hidden;
@@ -251,6 +253,7 @@ display: block;
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
+    display: block;
 }
 
 .mobile-menu-container {
@@ -400,6 +403,7 @@ display: block;
     min-width: 320px;
     margin: 0 auto;
 }
+
 
 .hero-container {
     display: flex;
@@ -1321,3 +1325,14 @@ input[type="checkbox"]:checked+.modal-checkbox-label .modal-checkbox-span {
     
 }
 /* #endregion Modal */
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+  .hero {
+    background-image: linear-gradient(to bottom,
+            rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)),
+    image-set(
+      url(../images/office-1.jpg) 1x,
+      url(../images/office-1x2.jpg) 2x
+    );
+  }
+}
