--- a/css/styles.css
+++ b/css/styles.css
@@ -341,7 +341,7 @@ display: block;
     font-size: 20px;
     line-height: 120%;
     letter-spacing: 0.02em;
-    font-style: none;
+    font-style: normal;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -611,13 +611,19 @@ display: block;
 }
 
 .features-list {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     gap: 24px;
+    max-width: 1158px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
 }
 
 .features-list-items {
-    width: calc((100% - 72px) / 4);
+    min-width: 264px;
+    border: none;
+    box-shadow: none;
 }
 
 .features-list-link {
@@ -625,11 +631,13 @@ display: block;
     align-items: center;
     justify-content: center;
     height: 112px;
+    min-width: 264px;
     background-color: #f4f4fd;
     border-radius: 4px;
     border: 1px solid #8e8f99;
     margin-bottom: 8px;
 }
+
 
 .icon-features {
     width: 64px;
