--- a/css/styles.css
+++ b/css/styles.css
@@ -378,10 +378,12 @@ display: block;
 }
 
 @media screen and (min-width: 768px) {
-    .mobile-menu {
+    .mobile-menu, .mobile-menu.is-open{
         display: none;
     }
+    
 }
+
 /* #endregion mobile menu */
 
 /* #endregion header */
@@ -550,21 +552,19 @@ display: block;
 }
 
 @media screen and (min-width: 768px) {
-    .features-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
 
     .features-list {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        gap: 24px;
-        width: 100%;
-        max-width: 736px; 
+        width: 100%; 
     }
 
     .features-list-items {
+        width: calc((100% - 24px) / 2);
+
+    }    
+    .features-list-items:hover,
+    .features-list-items:fokus {
         background-color: white;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         border: 1px solid #000;
@@ -577,16 +577,10 @@ display: block;
             line-height: 1.1;
             letter-spacing: 0.02em;
             color: #2e2f42;
-        text-align: left;
     }
 
     .features-list-text {
-        font-weight: 500;
-            font-size: 16px;
-            line-height: 1.5;
-            letter-spacing: 0.02em;
-            color: #434455;
-    
+    min-width: 353px;
     }
 }
 
@@ -660,6 +654,7 @@ display: block;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    min-width: 264px;
 }
 
 }
