--- a/css/styles.css
+++ b/css/styles.css
@@ -471,6 +471,16 @@ display: block;
 }
 }
 
+@media screen and (min-resolution: 2x) {
+    .hero {
+    background-image: linear-gradient(to bottom,
+                    rgba(46, 47, 66, 0.7),
+                    rgba(46, 47, 66, 0.7)),
+                url('../images/office-1x2.jpg');
+    }
+
+}
+
 @media screen and (min-width: 1158px) {
     .hero {
     padding: 188px 0;
